# info-radar

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  run.py
.github/workflows/: deepdive.yml  deploy-site.yml  feature.yml  test-buttondown.yml  thinker.yml  trend.yml
core/: __init__.py  digest.py  llm.py  models.py  notify.py  prompts.py  scorer.py  state.py  transcripts.py  util.py
fetchers/: __init__.py  arxiv.py  exa.py  followbuilders.py  github.py  htmlnews.py  huggingface.py  podcast.py  producthunt.py  rss.py  youtube.py
output/: .gitkeep  2026-07-06-thinker.md  2026-07-07-thinker.md  2026-07-08-trend.md  2026-07-09-thinker.md  2026-07-10-feature.md  2026-07-10-trend.md  2026-07-11-thinker.md  2026-07-12-thinker.md  2026-07-13-trend.md  2026-07-14-thinker.md  2026-07-15-trend.md  2026-07-16-thinker.md  2026-07-17-feature.md  2026-07-17-trend.md  2026-07-18-thinker.md  2026-07-19-thinker.md
output/transcripts/: 2026-07-06-podcast-20vc-20vc-why-now-is-the-time-for-the-application-la.json  2026-07-06-podcast-behind-the-craft-openai-pm-reveals-how-he-uses-codex.json  2026-07-06-podcast-crossing-agent-500-gui.json  2026-07-06-podcast-y-combinator-podcast-why-domain-experts-are-winning-.json  (+7 more)
prompts/: deepdive.md  design_score.md  feature_distill.md  thinker_distill.md  transcript_detail.md  trend_score.md
site/: build.py
state/: seen_feature.json  seen_thinker.json  seen_trend.json  token_usage.json  trend_history.json  youtube_channel_ids.json
trackers/: __init__.py  deepdive.py  feature.py  thinker.py  trend.py
